Stylesheet/emote/tag updates 2012-11-05

--- a/source-css/cuttershy.css
+++ b/source-css/cuttershy.css
@@ -223,3 +223,21 @@ a[href|="/slaughtershy"] {
     height: 200px;
     background-image: url(%%slaughtershy%%)
     }
+
+a[href|="/cutterhug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 143px;
+    height: 150px;
+    background-image: url(%%cutterhug%%)
+    }
+
+a[href|="/cutterbitch"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 267px;
+    height: 150px;
+    background-image: url(%%cutterbitch%%)
+    }
