--- a/source-css/desktopponies.css
+++ b/source-css/desktopponies.css
@@ -1,19 +1,12 @@
 a[href|='/derpfly'] { width:106px; height:96px; background-image: url(%%derpfly%%); background-position: 0px 0px; display: block; clear: none; float: left}
-
 a[href|='/cmcskip'] { width:133px; height:64px; background-image: url(%%cmcskip%%); background-position: 0px 0px; display: block; clear: none; float: left}
-
 a[href|='/rarifly'] { width:102px; height:138px; background-image: url(%%rarifly%%); background-position: 0px 0px; display: block; clear: none; float: left}
-
-
 a[href|='/dashprowl'] { width:114px; height:56px; background-image: url(%%dashprowl%%); background-position: 0px 0px; display: block; clear: none; float: left}
-
-
 a[href|='/lyratrot'] { width:111px; height:95px; background-image: url(%%lyratrot%%); background-position: 0px 0px; display: block; clear: none; float: left}
-
-
 a[href|='/sbscoot'] { width:116px; height:63px; background-image: url(%%sbscoot%%); background-position: 0px 0px; display: block; clear: none; float: left}
-
 a[href|='/dashfly'] { width:106px; height:77px; background-image: url(%%dashfly%%); background-position: 0px 0px; display: block; clear: none; float: left}
-
-
 a[href|='/screwfloat'] { width:108px; height:94px; background-image: url(%%screwfloat%%); background-position: 0px 0px; display: block; clear: none; float: left}
+a[href|='/shyfly'] { width:106px; height:96px; background-image: url(%%shyfly%%); background-position: 0px 0px; display: block; clear: none; float: left}
+a[href|='/ajtruck'] { width:144px; height:100px; background-image: url(%%ajtruck%%); background-position: 0px 0px; display: block; clear: none; float: left}
+a[href|='/twigallop'] { width:132px; height:79px; background-image: url(%%twigallop%%); background-position: 0px 0px; display: block; clear: none; float: left}
+a[href|='/scootascoot'] { width:89px; height:77px; background-image: url(%%scootascoot%%); background-position: 0px 0px; display: block; clear: none; float: left}
