--- a/source-css/mylittlechaos.css
+++ b/source-css/mylittlechaos.css
@@ -117,16 +117,6 @@ a[href|="/saynoe"] {
     background-position: -338px -0px
     }
 
-/*SPH Fun*/
-a[href|="/sphlyrafun"] {
-    clear: none;
-    display: block;
-    float: left;
-    background-image: url(%%sphfun%%);
-    width: 201px;
-    height: 136px;
-    }
-
 /*misc*/
 a[href|="/nightmarenyx"] {
     clear: none;
@@ -135,6 +125,14 @@ a[href|="/nightmarenyx"] {
     background-image: url(%%nightmarenyx%%);
     width: 300px;
     height: 450px;
+    }
+a[href|="/somuchporn"] {
+    clear: none;
+    display: block;
+    float: left;
+    background-image: url(%%somuchporn%%);
+    width: 300px;
+    height: 395px;
     }
 
 /*Animotes*/
