--- a/source-css/mylittlelistentothis.css
+++ b/source-css/mylittlelistentothis.css
@@ -2196,23 +2196,23 @@ a.author[href$="/31eipekili"] {
     vertical-align: bottom
     }
 a.author[href$="/31eipekili"]:after {
-    content: "BEST MOD";
+    content: "Adagio";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
     visibility: visible !important;
-    /*color: #4D4D4D !important;*/
+    color: #4D4D4D !important;
     }
 .side a.author[href$="/31eipekili"]:after {
     color: #888 !important;
 }
 a.author[href$="/31eipekili"]:hover:after {
-    content: "Is Adagio";
+    content: "BATMAN";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
     visibility: visible !important;
-    /*color: #009E25 !important*/
+    color: #009E25 !important
     }
 a.author[href$="/hiero_"] {
     display: inline-block;
@@ -2222,14 +2222,14 @@ a.author[href$="/hiero_"] {
     vertical-align: bottom
     }
 a.author[href$="/hiero_"]:after {
-    content: "MISSING MOD";
+    content: "Aquaman";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
     visibility: visible !important
     }
 a.author[href$="/hiero_"]:hover:after {
-    content: "Is not Adagio";
+    content: "I have a lot of bad ideas";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
@@ -2243,14 +2243,14 @@ a.author[href$="/Ryskillz101"] {
     vertical-align: bottom
     }
 a.author[href$="/Ryskillz101"]:after {
-    content: "OTHER MOD";
+    content: "Freakazoid";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
     visibility: visible !important
     }
 a.author[href$="/Ryskillz101"]:hover:after {
-    content: "Wishes he was Adagio";
+    content: "Wakko Warner";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
@@ -2284,7 +2284,7 @@ a.author[href$="/Phei"]:hover:after {
 
 
 .sidecontentbox a.author[href$="/Phei"]:after {
-    content: "INTERNATIONAL MOD";
+    content: "I can't think of a German superhero";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
@@ -2292,7 +2292,7 @@ a.author[href$="/Phei"]:hover:after {
     }
 
 .sidecontentbox a.author[href$="/Phei"]:hover:after {
-    content: "Hates Adagio";
+    content: "Hans Gruber is kinda close, right?";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
