--- a/source-css/rubypinch.css
+++ b/source-css/rubypinch.css
@@ -49,3 +49,11 @@ a[href|='/rubytrot']{
   float: left;
   background-image: url(%%trot%%);
   width: 50px; height: 50px}
+
+
+a[href|='/pinchytrot']{
+  display: block;
+  clear: none;
+  float: left;
+  background-image: url(%%rubytrot%%);
+  width: 88px; height:82px}
