Stylesheet/emote/tag updates 2012-11-07

--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -2100,9 +2100,9 @@ h3 {
 
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]{
    display: block;
-   height: 86px;
-   width: 81px;
-   background: url(%%fillyraindrops%%);
+   height: 96px;
+   width: 70px;
+   background: url(%%tinywoona%%);
    position: fixed; 
    top: 260px;
    right: -10px;
