--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -1,8 +1,6 @@
-/* LETS ORGANIZE THIS SHIT, I'M CONKY AND I LIKE SHIT ORGANIZED
+/* LETS ORGANIZE THIS SHIT, I LIKE SHIT ORGANIZED
 
 lolyeah organization in foodmanes okay
-
-CONKY ADDED SOME neat SHIT, CHECK THAT shit OUT, TACOS, NIGHTMODE FIX BACKGROUND, LARGER EDITING AREAS, AND a HIDDEN BONUS happy SURPRISE OF FUN.
 
 1. THE RULES: FUCKINGFOOD MANES MAN
 
@@ -126,8 +124,8 @@ a[href|="/sagepuke"]
     clear: none;
     display: block;
     float: left;
-    height: 322px;
-    width: 301px;
+    height: 250px;
+    width: 234px;
 }
 
 a[href|="/rariberry"]
@@ -137,8 +135,8 @@ a[href|="/rariberry"]
     clear: none;
     display: block;
     float: left;
-    height: 274px;
-    width: 270px;
+    height: 203px;
+    width: 200px;
 }
 
 a[href|="/doubledildo"]
@@ -151,18 +149,6 @@ a[href|="/doubledildo"]
     height: 114px;
     width: 157px;
 }
-
-a[href|="/twistballs"]
-{
-
- background-image: url(%%twistballs%%) !important;
-    clear: none;
-    display: block;
-    float: left;
-    height: 195px;
-    width: 197px;
-}
-
 
 .flair:fuckingcolors{
     background-color: green;
@@ -197,19 +183,19 @@ background-image: url(%%lyrasup%%) !important;
     clear: none;
     display: block;
     float: left;
-    height: 194px;
-    width: 252px;
+    height: 173px;
+    width: 222px;
 }
 
 a[href|="/tacoshy"]
 {
 
- background-image: url(%%fillytacoshy%%) !important;
+ background-image: url(%%tacoshy%%) !important;
     clear: none;
     display: block;
     float: left;
-    height: 505px;
-    width: 499px;
+    height: 303px;
+    width: 300px;
 }
 
 a[href|="/choctavia"]
@@ -962,12 +948,12 @@ a[href|="/whatthefacannons"]
 a[href|="/greatrage"]
 {
 
- background-image: url(%%N1oh8%%) !important;
+ background-image: url(%%greatrage%%) !important;
     clear: none;
     display: block;
     float: left;
-    height: 300px;
-    width: 509px;
+    height: 200px;
+    width: 339px;
 }
 
 
@@ -985,12 +971,12 @@ a[href|="/macinmane"]
 a[href|="/colgatemunism"] , a[href|="/colgatemunist"]
 {
 
- background-image: url(%%colstalin%%) !important;
+ background-image: url(%%colgatemunist%%) !important;
     clear: none;
     display: block;
     float: left;
-    height: 220px;
-    width: 166px;
+    height: 196px;
+    width: 150px;
 
 }
 
@@ -1018,6 +1004,17 @@ a[href|="/twiststare"]
 
 }
 
+a[href|="/wololo"]
+{
+
+ background-image: url(%%WoLoLo%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 150px;
+    width: 150px;
+
+}
 
 /*** Bottom page Foodmane  ***/
 .footer-parent {
@@ -1121,4 +1118,29 @@ a[href|="/udnt"] {
     width: 150px;
     height: 150px;
     background-position: -0px -0px;
+}
+
+/***   SPRITE SHEETS 200x200   ***/
+
+a[href|="/twistballs"], a[href|="/mcragepants"] { 
+
+
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 205px;
+    background-image:url(%%mcrage%%) !important
+    }
+
+a[href|="/twistballs"] {
+    width: 200px;
+    height: 205px;
+    background-position: -0px -0px;
+}
+
+a[href|="/mcragepants"] {
+    width: 200px;
+    height: 205px;
+    background-position: -200px -0px;
 }
