--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -253,7 +253,7 @@ a[href|="/evanmacave"] {
     }
 
 /************MLP-LRG*************/
-a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"] {
+a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"] {
     display: block;
     clear: none;
     float: left;
@@ -343,6 +343,10 @@ a[href|="/calcos"] {
 a[href|="/synesthesia"] {
     background-position: -1986px -0px;
     width: 128px
+    }
+a[href|="/srslypickled"] {
+    background-position: -2114px -0px;
+    width: 158px
     }
 
 /***********MLP-XLRG*************/
