--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -255,14 +255,14 @@ background-image: url(%%bj-anim%%) !important;
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v22%%) !important;
+background-image: url(%%foe-em3-v23%%) !important;
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -277,6 +277,7 @@ a[href|="/lpfilly"]{ background-position: 0px -1255px; width: 125px; height: 150
 /* a[href|="/cyberboop"]{ background-position: 0px -1410px; width: 200px; height: 94px;} */
 a[href|="/qnwhsk"]{ background-position: 0px -1510px; width: 70px; height: 85px;}
 a[href|="/bjwhiskey"]{ background-position: 0px -1905px; width: 96px; height: 149px;}
+a[href|="/crazyrampage"]{ background-position: 0px -2060px; width: 150px; height: 105px;}
 
 
 a[href|="/advicebj"]
@@ -347,6 +348,16 @@ a[href|="/lpsign"] em{
     }   
 a[href|='/lpsign'] {width:262px; height:300px; background-position: 0px -1600px}
 
+a[href|="/rampagesmash"]
+{
+display: block;
+clear: none;
+float: left;
+width: 200px;
+height: 221px;
+background-image: url(%%rsmash-v2%%) !important;
+}
+a[href|='/rampagesmash'] {background-position: 0px 0px}
 
 
 /* Flair */
