Stylesheet/emote/tag updates 2012-11-11

--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -255,14 +255,14 @@ background-image: url(%%bj-anim%%) !important;
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v23%%) !important;
+background-image: url(%%foe-em3-v24%%) !important;
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -278,6 +278,7 @@ a[href|="/lpfilly"]{ background-position: 0px -1255px; width: 125px; height: 150
 a[href|="/qnwhsk"]{ background-position: 0px -1510px; width: 70px; height: 85px;}
 a[href|="/bjwhiskey"]{ background-position: 0px -1905px; width: 96px; height: 149px;}
 a[href|="/crazyrampage"]{ background-position: 0px -2060px; width: 150px; height: 105px;}
+a[href|="/deus"]{ background-position: 0px -2170px; width: 150px; height: 139px;}
 
 
 a[href|="/advicebj"]
@@ -341,11 +342,11 @@ a[href|="/lpsign"] em{
     color: #465A73 !important;
     text-align: center !important;
     text-transform: uppercase !important;
-    text-shadow: -1px 0 #394D66,0 1px black,1px 0 #394D66,0 -1px #394D66!important;
+    text-shadow: -1px 0 #394D66,0 1px #394D66,1px 0 #394D66,0 -1px #394D66!important;
     font-family: "Comic Sans" !important;
     font-style: normal !important;
     font-size: 15px !important;
-    }   
+    }    
 a[href|='/lpsign'] {width:262px; height:300px; background-position: 0px -1600px}
 
 a[href|="/rampagesmash"]
