--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -51,7 +51,14 @@ a[href|="/twirighthug"], a[href|="/twilighthug"] {
     height: 70px;
     background-image: url(%%twirighthug%%)
     }
-
+a[href|="/flutterhugs"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 310px;
+    height: 267px;
+    background-image: url(%%flutterhugs%%)
+    }
 
 /* Flair! So many wonderful choices! */
 
