--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -197,7 +197,16 @@ a[href|="/tacoshy"]
     height: 303px;
     width: 300px;
 }
+a[href|="/sexualpleasure"]
+{
 
+ background-image: url(%%ithinkso%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 117px;
+    width: 129px;
+}
 a[href|="/choctavia"]
 {
 
