--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -105,7 +105,7 @@ body
 
 /* i: HEADER */
 #header {
-    background-image: url(%%banner%%);
+    background-image: url(%%banner2%%);
     border-bottom: 1px solid #000000;
     height: 144px;
     z-index: 0;
